--- a/src/partials/footer.ejs
+++ b/src/partials/footer.ejs
@@ -6,19 +6,19 @@
   >
     <div>
       <a href="/links/discord" class="me-4">
-        <i class="fa-brands fa-discord fa-lg"></i>
+        <i class="fa-brands fa-discord fa-lg hover-bounce-animation"></i>
       </a>
       <a href="/links/vk" class="me-4">
-        <i class="fa-brands fa-vk fa-xl"></i>
+        <i class="fa-brands fa-vk fa-xl hover-bounce-animation"></i>
       </a>
       <a href="/links/tg" class="me-4">
-        <i class="fa-brands fa-telegram fa-xl"></i>
+        <i class="fa-brands fa-telegram fa-xl hover-bounce-animation"></i>
       </a>
       <a href="/links/youtube" class="me-4">
-        <i class="fa-brands fa-youtube fa-xl"></i>
+        <i class="fa-brands fa-youtube fa-xl hover-bounce-animation"></i>
       </a>
       <a href="/links/github" class="me-4">
-        <i class="fa-brands fa-github fa-xl"></i>
+        <i class="fa-brands fa-github fa-xl hover-bounce-animation"></i>
       </a>
     </div>
 
