--- a/src/partials/serverCard.ejs
+++ b/src/partials/serverCard.ejs
@@ -25,7 +25,7 @@
               >
             </p>
             <a href="steam://connect/<%= serverIP %>:<%= serverPort %>">
-              <button type="button" class="btn btn-outline-dark">
+              <button type="button" class="btn btn-outline-primary">
                 Присоединиться
               </button></a
             >
