--- a/src/partials/modules/headerBtn.ejs
+++ b/src/partials/modules/headerBtn.ejs
@@ -1,54 +1,61 @@
 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
   <li class="nav-item dropdown nav-link">
-    <img
-      class="header-icon"
+    <i
+      class="fa-solid fa-shop header-icon fa-xl hover-bounce-animation"
       href="#"
       role="button"
       id="dropdownMenuLink"
       data-bs-toggle="dropdown"
       aria-expanded="false"
-      src="img/icon/shop.svg"
-      alt=""
-    />
+    ></i>
 
     <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
       <li><a class="dropdown-item" href="/shop">Все</a></li>
-      <li><a class="dropdown-item" href="/shopModels">Модельки</a></li>
+      <li><a class="dropdown-item" href="/shop/models">Модельки</a></li>
       <li>
-        <a class="dropdown-item" href="/shopPrivilege">Привилегии</a>
+        <a class="dropdown-item" href="/shop/privilege">Привилегии</a>
       </li>
     </ul>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="/tickets" title="Тикеты">
-      <img
-        class="header-icon"
-        href="#"
-        role="button"
-        src="img/icon/question.svg"
-        alt=""
-    /></a>
+      <i class="fa-solid fa-ticket header-icon fa-xl hover-bounce-animation"></i
+    ></a>
   </li>
 
   <li class="nav-item">
     <a class="nav-link" href="/rules" title="Правила">
-      <img
-        class="header-icon"
-        href="#"
-        role="button"
-        src="img/icon/rules.svg"
-        alt=""
-    /></a>
+      <i
+        class="fa-sharp fa-solid fa-scroll header-icon fa-xl hover-bounce-animation"
+      ></i
+    ></a>
   </li>
 
   <li class="nav-item">
     <a class="nav-link" href="/mapViewer" title="Предпросмотрт карт">
-      <img
-        class="header-icon"
-        href="#"
-        role="button"
-        src="img/icon/image.svg"
-        alt=""
-    /></a>
+      <i class="fa-solid fa-cubes header-icon fa-xl hover-bounce-animation"></i
+    ></a>
+  </li>
+</ul>
+<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+  <li class="nav-item">
+    <div class="d-inline-flex">
+      <label
+        for="themeSwitch"
+        class="form-check-label"
+        style="margin-right: 5px"
+        ><i class="fa-solid fa-sun fa-lg"></i
+      ></label>
+      <div class="form-check form-switch">
+        <input
+          class="theme-switcher form-check-input"
+          type="checkbox"
+          role="switch"
+          id="themeSwitch"
+        />
+
+        <i class="fa-solid fa-moon fa-lg"></i>
+      </div>
+    </div>
   </li>
 </ul>
