--- a/src/partials/head.ejs
+++ b/src/partials/head.ejs
@@ -13,6 +13,12 @@
   referrerpolicy="no-referrer"
 ></script>
 <link
+  href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+  rel="stylesheet"
+  integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+  crossorigin="anonymous"
+/>
+<link
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
   integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
@@ -26,6 +32,7 @@
   referrerpolicy="no-referrer"
   async
 ></script>
+<script src="/js/themeSwitch.js" async></script>
 <meta name="designer" content="Zachey" />
 <meta name="developer" content="Zachey" />
 <meta name="copyright" content="ShadowSeek" />
@@ -38,80 +45,3 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 <meta name="format-detection" content="telephone=no" />
 <meta name="description" content="Один из лучших HNS серверов CS:GO!" />
-<script>
-  var themes = {
-    default:
-      "https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css",
-    dark: "https://cdnjs.cloudflare.com/ajax/libs/bootstrap-dark-mode/1.0.2/bootstrap-dark-mode.dark.min.css",
-  };
-
-  $(function () {
-    var themesheet = $('<link rel="stylesheet" />');
-    var theme = getCookie("theme");
-
-    if (theme && theme in themes) {
-      themesheet.attr("href", themes[theme]);
-      $("#themeSwitch").prop("checked", theme === "dark");
-    } else {
-      themesheet.attr("href", themes["default"]);
-    }
-
-    themesheet.appendTo("head");
-
-    $("#themeSwitch").change(function () {
-      var isChecked = $(this).is(":checked");
-      var theme = isChecked ? "dark" : "default";
-      themesheet.attr("href", themes[theme]);
-      setCookie("theme", theme, 365);
-    });
-
-    $(".theme-link").click(function (e) {
-      e.preventDefault();
-      var theme = $(this).data("theme");
-      themesheet.attr("href", themes[theme]);
-      setCookie("theme", theme, 365);
-      $("#themeSwitch").prop("checked", theme === "dark");
-    });
-  });
-
-  function setCookie(name, value, days) {
-    var expires = "";
-    if (days) {
-      var date = new Date();
-      date.setTime(date.getTime() + days * 24 * 60 * 60 * 1000);
-      expires = "; expires=" + date.toGMTString();
-    }
-    document.cookie = name + "=" + value + expires + "; path=/";
-  }
-
-  function getCookie(name) {
-    var nameEQ = name + "=";
-    var ca = document.cookie.split(";");
-    for (var i = 0; i < ca.length; i++) {
-      var c = ca[i];
-      while (c.charAt(0) == " ") c = c.substring(1, c.length);
-      if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length, c.length);
-    }
-    return null;
-  }
-
-  $(document).ready(function () {
-    // При изменении состояния свитчера
-    $("#themeSwitch").change(function () {
-      var isChecked = $(this).is(":checked"); // Проверить, включен ли свитчер
-    });
-
-    // При клике на ссылку с классом "theme-link"
-    $(".theme-link").click(function (e) {
-      e.preventDefault(); // Отменить переход по ссылке
-
-      var theme = $(this).data("theme"); // Получить значение атрибута "data-theme"
-
-      // Установить состояние свитчера в зависимости от выбранной темы
-      $("#themeSwitch").prop("checked", theme === "dark");
-
-      // Добавить или удалить класс "dark" на элементе <body> в зависимости от выбранной темы
-      $("body").toggleClass("dark", theme === "dark");
-    });
-  });
-</script>
