--- a/src/partials/serverCard.ejs
+++ b/src/partials/serverCard.ejs
@@ -11,7 +11,9 @@
         </div>
         <div class="col-md-8">
           <div class="card-body">
-            <h5 class="card-title"><b><%= serverName %></b></h5>
+            <h5 class="card-title" style="color: gray">
+              <b><%= serverName %></b>
+            </h5>
             <p class="card-text">
               <small class="text-muted"
                 >Текущая карта: <code><%= serverMap %></code></small
