--- a/src/partials/footer.ejs
+++ b/src/partials/footer.ejs
@@ -80,11 +80,12 @@
   <!-- Section: Links  -->
 
   <!-- Copyright -->
-  <div class="text-center">
-    <h6>
-      © Copyright 2023 ShadowSeek<br />
-      Powered by
-    </h6>
+  <div
+    class="text-center p-4 rounded-5"
+    style="background-color: rgba(0, 0, 0, 0.03)"
+  >
+    © Copyright 2023 ShadowSeek<br />
+    Powered by
     <a style="text-decoration: none" href="https://github.com/zachey01"
       >MimiCMS</a
     >
