--- a/src/partials/modules/headerBtn.ejs
+++ b/src/partials/modules/headerBtn.ejs
@@ -40,13 +40,21 @@
 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
   <li class="nav-item">
     <div class="d-inline-flex">
-      <div class="d-flex">
-        <div class="form-check form-switch ms-auto mt-3 me-3">
-          <label class="form-check-label ms-3" for="lightSwitch">
-            <i class="fa-solid fa-moon fa-lg" style="margin-left: -10px"></i>
-          </label>
-          <input class="form-check-input" type="checkbox" id="lightSwitch" />
-        </div>
+      <label
+        for="themeSwitch"
+        class="form-check-label"
+        style="margin-right: 5px"
+        ><i class="fa-solid fa-sun fa-lg"></i
+      ></label>
+      <div class="form-check form-switch">
+        <input
+          class="theme-switcher form-check-input"
+          type="checkbox"
+          role="switch"
+          id="themeSwitch"
+        />
+
+        <i class="fa-solid fa-moon fa-lg"></i>
       </div>
     </div>
   </li>
