--- a/src/partials/admin/header.ejs
+++ b/src/partials/admin/header.ejs
@@ -95,7 +95,7 @@
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Подтверждение</h5>
+              <h5 class="modal-title" id="exampleModalLabel">Confirmation</h5>
               <button
                 type="button"
                 class="btn-close"
@@ -104,12 +104,12 @@
               ></button>
             </div>
             <div class="modal-body">
-              Вы уверены, что хотите выйти из своей учетной записи?
+              Are you sure you want to log out of your account?
             </div>
             <div class="modal-footer">
               <a href="/logout"
                 ><button type="button" class="btn btn-secondary">
-                  Выйти
+                  Exit
                 </button></a
               >
               <button
@@ -117,7 +117,7 @@
                 class="btn btn-primary"
                 data-bs-dismiss="modal"
               >
-                Отмена
+                Cancel
               </button>
             </div>
           </div>
