--- a/src/partials/footer.ejs
+++ b/src/partials/footer.ejs
@@ -35,41 +35,24 @@
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
           <!-- Content -->
           <h6 class="text-uppercase fw-bold mb-4">
-            <i class="fa-solid fa-ghost me-3"></i>ShadowSeek
+            <i class="fa-solid fa-ghost me-3"></i><%= name %>
           </h6>
-          <p>Выдающийся сервер CS:GO с режимом Hide and Seek (HAS)</p>
+          <p><%= serverDescription %></p>
         </div>
-        <!-- Grid column -->
-
-        <!-- Grid column -->
-        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-          <p>
-            <a href="/privacy" class="text-reset"
-              >Политика конфиденциальности</a
-            >
-          </p>
-          <p>
-            <a href="/contacts" class="text-reset">Контакты</a>
-          </p>
-          <p>
-            <a href="/oferts" class="text-reset">Договор оферты</a>
-          </p>
-        </div>
-        <!-- Grid column -->
 
         <!-- Grid column -->
         <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
           <p>
-            <a href="/shop" class="text-reset">Магазин</a>
+            <a href="/shop" class="text-reset">Shop</a>
           </p>
           <p>
-            <a href="/tickets" class="text-reset">Тикеты</a>
+            <a href="/tickets" class="text-reset">Tickets</a>
           </p>
           <p>
-            <a href="/rules" class="text-reset">Правила</a>
+            <a href="/rules" class="text-reset">Rules</a>
           </p>
           <p>
-            <a href="/mapViewer" class="text-reset">Предпосмотр карт</a>
+            <a href="/mapViewer" class="text-reset">Map Preview</a>
           </p>
         </div>
         <!-- Grid column -->
@@ -80,12 +63,11 @@
   <!-- Section: Links  -->
 
   <!-- Copyright -->
-  <div
-    class="text-center p-4 rounded-5"
-    style="background-color: rgba(0, 0, 0, 0.03)"
-  >
-    © Copyright 2023 ShadowSeek<br />
-    Powered by
+  <div class="text-center">
+    <h6>
+      © Copyright 2023 ShadowSeek<br />
+      Powered by
+    </h6>
     <a style="text-decoration: none" href="https://github.com/zachey01"
       >MimiCMS</a
     >
