--- a/src/partials/nonAuth/header.ejs
+++ b/src/partials/nonAuth/header.ejs
@@ -17,7 +17,7 @@
       <div class="d-flex">
         <a href="/auth/steam" class="header-auth-btn">
           <button type="button" class="btn btn-primary">
-            Войти<i
+            Sign in<i
               class="fa-brands fa-steam fa-lg"
               style="margin-left: 5px"
             ></i></button
