--- a/src/views/404.ejs
+++ b/src/views/404.ejs
@@ -97,11 +97,11 @@
         })();
 
         var phrases = [
-          "Не найдено",
+          "Not found",
           "404",
           "40",
           "4",
-          "Не найдено",
+          "Not found",
           "4",
           "40",
           "404",
