--- a/src/views/balance.ejs
+++ b/src/views/balance.ejs
@@ -11,21 +11,21 @@
           <div class="col-md-6">
             <div class="card">
               <div class="card-header">
-                <h4 class="mb-0">Пополнение баланса</h4>
+                <h4 class="mb-0">Balance replenishment</h4>
               </div>
               <div class="card-body">
                 <form>
                   <div class="form-group">
-                    <label for="cardNumber">Сумма</label>
+                    <label for="cardNumber">Amount</label>
                     <input
                       type="text"
                       class="form-control"
                       id="cardNumber"
-                      placeholder="Введите сумму пополнения"
+                      placeholder="Enter the amount of replenishment"
                     />
                   </div>
                   <button type="submit" class="btn btn-primary">
-                    Пополнить
+                    Replenish
                   </button>
                 </form>
               </div>
