--- a/src/views/mapViewerNonAuth.ejs
+++ b/src/views/mapViewerNonAuth.ejs
@@ -11,7 +11,7 @@
       <div class="container-xxl text-center" align="center">
         <div id="renderModel">
           <p class="text-center">
-            Left/Right mouse - осмотр <br />Wheel mouse - масштаб
+            Left/Right mouse - inspection <br />Wheel mouse - scale
           </p>
         </div>
       </div>
