--- a/src/views/nonAuthproducts.ejs
+++ b/src/views/nonAuthproducts.ejs
@@ -22,18 +22,18 @@
                 class="btn btn-sm btn-outline-secondary"
                 onclick="nonAuth()"
               >
-                Купить
+                Buy
               </button>
             </div>
           </div>
         </div>
         <% }); %> <% } else { %>
-        <p>Нет доступных продуктов</p>
+        <p>There are no products available</p>
         <% } %>
       </div>
       <script>
         function nonAuth() {
-          alert("Вы должны войти для покупки");
+          alert("You must be logged in to purchase");
         }
       </script>
     </main>
