--- a/src/views/tickets.ejs
+++ b/src/views/tickets.ejs
@@ -11,11 +11,11 @@
           <div class="col-md-6 mx-auto">
             <div class="card mt-5">
               <div class="card-body">
-                <h3 class="card-title text-center mb-4">Написать тикет</h3>
+                <h3 class="card-title text-center mb-4">Write a ticket</h3>
                 <form id="telegram-form">
                   <div class="form-group">
                     <label for="message"
-                      >Опишите вашу проблему/Нововведение</label
+                      >Describe your problem/Innovation</label
                     >
                     <textarea
                       class="form-control"
@@ -30,7 +30,7 @@
                     class="btn btn-primary btn-block mt-4"
                     onclick="submitForm(event)"
                   >
-                    Отправить
+                    Send
                   </button>
                 </form>
               </div>
@@ -50,7 +50,7 @@
           <div class="modal-content">
             <div class="modal-header">
               <h5 class="modal-title" id="successModalLabel">
-                Успешно отправлено!
+                Successfully shipped!
               </h5>
               <a href="">
                 <button
@@ -75,7 +75,7 @@
               </a>
             </div>
             <div class="modal-body">
-              <p>Ваше сообщение успешно отправлено</p>
+              <p>Your message has been successfully sent</p>
             </div>
           </div>
         </div>
