--- a/src/partials/modules/headerBtn.ejs
+++ b/src/partials/modules/headerBtn.ejs
@@ -10,21 +10,21 @@
     ></i>
 
     <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-      <li><a class="dropdown-item" href="/shop">Все</a></li>
-      <li><a class="dropdown-item" href="/shop/models">Модельки</a></li>
+      <li><a class="dropdown-item" href="/shop">All</a></li>
+      <li><a class="dropdown-item" href="/shop/models">Models</a></li>
       <li>
-        <a class="dropdown-item" href="/shop/privilege">Привилегии</a>
+        <a class="dropdown-item" href="/shop/privilege">Privileges</a>
       </li>
     </ul>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="/tickets" title="Тикеты">
+    <a class="nav-link" href="/tickets" title="Tickets">
       <i class="fa-solid fa-ticket header-icon fa-xl hover-bounce-animation"></i
     ></a>
   </li>
 
   <li class="nav-item">
-    <a class="nav-link" href="/rules" title="Правила">
+    <a class="nav-link" href="/rules" title="Rules">
       <i
         class="fa-sharp fa-solid fa-scroll header-icon fa-xl hover-bounce-animation"
       ></i
@@ -32,7 +32,7 @@
   </li>
 
   <li class="nav-item">
-    <a class="nav-link" href="/mapViewer" title="Предпросмотрт карт">
+    <a class="nav-link" href="/mapViewer" title="Map Preview">
       <i class="fa-solid fa-cubes header-icon fa-xl hover-bounce-animation"></i
     ></a>
   </li>
@@ -40,21 +40,13 @@
 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
   <li class="nav-item">
     <div class="d-inline-flex">
-      <label
-        for="themeSwitch"
-        class="form-check-label"
-        style="margin-right: 5px"
-        ><i class="fa-solid fa-sun fa-lg"></i
-      ></label>
-      <div class="form-check form-switch">
-        <input
-          class="theme-switcher form-check-input"
-          type="checkbox"
-          role="switch"
-          id="themeSwitch"
-        />
-
-        <i class="fa-solid fa-moon fa-lg"></i>
+      <div class="d-flex">
+        <div class="form-check form-switch ms-auto mt-3 me-3">
+          <label class="form-check-label ms-3" for="lightSwitch">
+            <i class="fa-solid fa-moon fa-lg" style="margin-left: -10px"></i>
+          </label>
+          <input class="form-check-input" type="checkbox" id="lightSwitch" />
+        </div>
       </div>
     </div>
   </li>
