--- a/src/views/productsModels.ejs
+++ b/src/views/productsModels.ejs
@@ -27,7 +27,7 @@
                       class="btn btn-sm btn-outline-secondary"
                       onclick="notEnoughBalance()"
                     >
-                      Купить
+                      Buy
                     </button>
                     <% } else { %>
                     <button
@@ -35,7 +35,7 @@
                       id="buyBtn<%= product.id %>"
                       data-id="<%= product.id %>"
                     >
-                      Купить
+                      Buy
                     </button>
                     <% } %>
                   </div>
@@ -61,10 +61,6 @@
                   xhr.send();
                 });
               });
-              function notEnoughBalance() {
-                alert("У вас недостаточно денег для списания");
-              }
-
               function notEnoughBalance() {
                 alert("У вас недостаточно денег для списания");
               }
